trunk/Archive2/82/2ea88d21144e4a/output
main.cpp: In function 'int main()':
main.cpp:7:8: error: expected unqualified-id before '[' token
     int[5] deref = *ptr;
        ^
